# hamalert-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/plans/: 2025-12-28-backup-restore-edit-design.md  2025-12-28-backup-restore-edit-implementation.md  2025-12-30-profiles-design.md  2025-12-30-profiles-implementation.md  2025-12-30-xdg-backup-location-design.md
src/: main.rs
