[package]
name = "hamalert-cli"
version = "0.2.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["cookies", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
dirs = "5.0"
